# OCR-Orc

./: .gitignore  ALTERNATIVE_DETECTION_APPROACHES.md  COMMIT_MESSAGE.txt  EXPERT_CRITICAL_ANALYSIS.md  INTEGRATION_READINESS_ASSESSMENT.md  MAGIC_DETECT_ADVANCED_RESEARCH.md  MAGIC_DETECT_ALGORITHM.md  MAGIC_DETECT_FLOWCHART.txt  MAGIC_DETECT_UI_ENHANCEMENTS.md  README.md  SMART_DETECTION_EXPERT_DEBATE.md  SMART_DETECTION_IMPLEMENTATION_PLAN.md  UX_EXPERT_DEBATE.md  UX_EXPERT_DEBATE_MAGIC_DETECT.md  UX_EXPERT_DEBATE_ROUND2.md
Optical Wizard Doctor/: .clangd  .gitignore  AppIcon.icns  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  DETECTION_ANALYSIS.md  DISTRIBUTION.md  Info.plist.in  MAGIC_DETECT_TEST_CONFIGS.md  PRODUCTION_SUMMARY.md  RELEASE_NOTES.md  create_app_icon.py  create_app_icon_from_logo.py  create_dmg.sh  deploy_macos.sh  deploy_macos_CORRECT.sh  entitlements.plist  vcpkg.json
Optical Wizard Doctor/docs/: COMPETITIVE_ANALYSIS.md  COORDINATE_SYSTEM.md  DATA_STRUCTURES.md  DEPENDENCIES.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_INDEX.md  EXPORT_FORMATS.md  FUNCTIONAL_REQUIREMENTS.md  FUNCTION_REFERENCE.md  ICON_INVENTORY.md  KEYBOARD_SHORTCUTS.md  MARKETING_PLAN.md  MARKETING_STRATEGY.md  MARKET_ANALYSIS.md  OCR_DEEP_RESEARCH_FINDINGS.md  OCR_FIRST_DETECTION_ALGORITHM.md  OCR_FIRST_DETECTION_DETAILED_PLAN.md  OCR_FIRST_DETECTION_IMPLEMENTATION_PLAN.md  OCR_UNCERTAINTIES_ANALYSIS.md  PRODUCTION_CHECKLIST.md  README.md  SOFTWARE_DESIGN_SPECIFICATION.md  STRATEGIC_VISION_AUTOMATION_SUITE.md  TEST_CHECKLIST.md  UI_UX_DESIGN.md  USER_INTERFACE_SPECIFICATION.md  WORKFLOW_DOCUMENTATION.md
Optical Wizard Doctor/docs/CHEAT_SHEETS/: COORDINATE_SYSTEM_QUICK_REF.md  EXPORT_FORMATS_QUICK_REF.md  KEYBOARD_SHORTCUTS_QUICK_REF.md  QUICK_REFERENCE.md  UI_COMPONENTS_QUICK_REF.md
Optical Wizard Doctor/docs/archive/: ANCHOR_BASED_RESIZE_SOLUTION.md  ARCHITECTURE_PLAN.md  BUG_FIXES_RESEARCH.md  BUG_INVESTIGATION.md  C++_How_It_Works_2025.md  C++_Modern_Overview_2025.md  C++_Quick_Reference_2025.md  CANVAS_MODULARIZATION_PLAN.md  CODE_REVIEW_REPORT.md  CODING_METHODOLOGY.md  DEBUG_PROMPT.md  DEEP_ANALYSIS.md  DEPLOYMENT_WORKFLOW.md  DESIGN_ANALYSIS_BASIC_LAYOUT.md  DESIGN_ANALYSIS_COORDINATE_SYSTEM.md  DESIGN_ANALYSIS_DATA_MODELS.md  DMG_ISSUES.md  EXPERT_PLANNING_SESSION.md  HANDOFF_PROMPT.md  INTEGRATION_ISSUES_BASIC_LAYOUT.md  INTEGRATION_ISSUES_COORDINATE_SYSTEM.md  MAGIC_SELECT_RESEARCH.md  MAINWINDOW_MODULARIZATION_PLAN.md  META_ARCHITECTURE.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_PLAN.md  MODULARIZATION_STATUS.md  MainWindowRegionOperations_PLAN.md  Modern_UI_Design_Research_2025.md  Modern_UX_Design_Research_2025.md  NOMENCLATURE.md  ONTOLOGY.md  ORCHESTRATOR_PROMPT.md  PHASE_1.4_COMPLETION_REPORT.md  PHASE_1.5_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2.1_PROGRESS.md  PHASE_2.2_PROGRESS.md  PHASE_2.4_PROGRESS.md  PHASE_2_PROVEN_METHODS.md  (+30 more)
Optical Wizard Doctor/docs/archive/AGENT_PROMPTS/: CODE_REVIEW_AND_FIX_RESEARCH.md
Optical Wizard Doctor/docs/archive/IMPLEMENTATION_PLAN/: IMPLEMENTATION_SUMMARY.md  README.md
Optical Wizard Doctor/src/: main.cpp
Optical Wizard Doctor/src/core/: .gitkeep  Constants.h  CoordinateSystem.cpp  CoordinateSystem.h
Optical Wizard Doctor/src/export/: .gitkeep  CsvExporter.cpp  CsvExporter.h  JsonExporter.cpp  JsonExporter.h  JsonImporter.cpp  JsonImporter.h  MaskGenerator.cpp  MaskGenerator.h
Optical Wizard Doctor/src/models/: .gitkeep  DocumentState.cpp  DocumentState.h  GroupData.cpp  GroupData.h  RegionData.cpp  RegionData.h  StateSnapshot.h
Optical Wizard Doctor/src/ui/: MainWindow.cpp  MainWindow.h  README.md  ThemeManager.cpp  ThemeManager.h
Optical Wizard Doctor/src/ui/canvas/: Canvas.cpp  Canvas.h  CanvasMouseMode.h
Optical Wizard Doctor/src/ui/utils/: DetectionWorker.cpp  DetectionWorker.h
Optical Wizard Doctor/src/utils/: AdaptiveThresholdManager.cpp  AdaptiveThresholdManager.h  CheckboxDetector.cpp  CheckboxDetector.h  ConfidenceCalculator.cpp  ConfidenceCalculator.h  DetectionCache.cpp  DetectionCache.h  DocumentPreprocessor.cpp  DocumentPreprocessor.h  DocumentTypeClassifier.cpp  DocumentTypeClassifier.h  FormFieldDetector.cpp  FormFieldDetector.h  FormStructureAnalyzer.cpp  FormStructureAnalyzer.h  GroupInferencer.cpp  GroupInferencer.h  ImageConverter.cpp  ImageConverter.h  InputValidator.cpp  InputValidator.h  OcrTextExtractor.cpp  OcrTextExtractor.h  PatternAnalyzer.cpp  PatternAnalyzer.h  PdfLoader.cpp  PdfLoader.h  RectangleDetector.cpp  RectangleDetector.h  RegionDetector.cpp  RegionDetector.h  RegionValidator.cpp  RegionValidator.h  SpatialClusterer.cpp  SpatialClusterer.h  TextRegionRefiner.cpp  TextRegionRefiner.h  TypeInferencer.cpp  TypeInferencer.h
Optical Wizard Doctor/src/utils/patterns/: NameFieldPatternDetector.cpp  NameFieldPatternDetector.h  (+4 more)
Optical Wizard Doctor/tests/: CMakeLists.txt  DEBUGGING_SESSION_SUMMARY.md  FIX_PLAN.md  IMPLEMENTATION_STATUS.md  MagicDetectionTestRunner.cpp  MagicDetectionTestRunner.h  TestDataManager.cpp  TestDataManager.h  test_canvas_coordinate_cache.cpp  test_canvas_hit_tester.cpp  test_canvas_region_creator.cpp  test_canvas_region_operations.cpp  test_canvas_rotation.cpp  test_canvas_selection_manager.cpp  test_canvas_zoom_controller.cpp  test_checkbox_detector.cpp  test_confidence_calculator.cpp  test_coordinate_system.cpp  test_coordinate_system_comprehensive.cpp  test_csv_exporter.cpp  test_data_models.cpp  test_input_validator.cpp  test_json_exporter.cpp  test_json_importer.cpp  test_magic_detection_suite.cpp  test_mainwindow_integration.cpp  test_mask_generator.cpp  test_ocr_first_integration.cpp  test_ocr_text_extractor.cpp  test_pattern_analyzer.cpp  test_region_editor_fields.cpp  test_text_region_refiner.cpp  test_theme_manager.cpp  test_undo_redo.cpp
Optical Wizard Doctor/tests/instrumentation/: PipelineInstrumentation.cpp  PipelineInstrumentation.h
Optical Wizard Doctor/tests/metrics/: MetricsCalculator.cpp  MetricsCalculator.h
Optical Wizard Doctor/tests/reporting/: TestReporter.cpp  TestReporter.h
(+168 files in other folders)
